<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">BuildBox</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="kitchen_content_url_property">buildbox.contenturl</string>
    <string name="kitchen_rom_url_property">buildbox.updateurl</string>
    <string name="kitchen_rom_version_property">buildbox.version</string>
    <string name="kitchen_download_dir">buildbox.downloaddir</string>
    <string name="app_cancel_message">It seems your rom is not supporting this application, please speak with the maintainer of it for further informations.</string>
    <string name="thumbnail_description">Thumbnail</string>
    <string name="default_rom_url"/>
    <string name="default_content_url">http://kitchen.tectas.eu/TestContent.json</string>
    <string name="changelog_head">Changelog</string>
    <string name="md5sum_head">md5sum:</string>
    <string name="detail_property">detail</string>
    <string name="changelog_property">changelog</string>
    <string name="item_parent_type">parent</string>
    <string name="item_type_property">type</string>
    <string name="item_child_type">children</string>
    <string name="description_property">description</string>
    <string name="children_property">children</string>
    <string name="dependencies_property">dependencies</string>
    <string name="detailurl_property">detailurl</string>
    <string name="developers_donationurls_property">donationUrls</string>
    <string name="url_property">url</string>
    <string name="developers_property">developers</string>
    <string name="title_property">title</string>
    <string name="version_property">version</string>
    <string name="md5sum_property">md5</string>
    <string name="thumbnailurl_property">thumbnailurl</string>
    <string name="developer_names_property">names</string>
    <string name="id_property">ID</string>
    <string name="imageurls_property">images</string>
    <string name="item_detail_type">detail</string>
    <string name="webpages_property">webpages</string>
    <string name="developers_head">Developers</string>
    <string name="webpages_head">Webpages/Support:</string>
    <string name="service_notification_title">BuildBox Download Service</string>
    <string name="service_notification_text">backup</string>
    <string name="service_result_notification_title">BuildBox Finished Downloads</string>
    <string name="service_result_notification_text">Expand to view</string>
    <string name="service_download_finished">successfully finished</string>
    <string name="service_download_failed">failed</string>
    <string name="service_download_mismatch">md5sum mismatch</string>
    <string name="service_result_notification_bigview_title">Finished Downloads</string>
    <string name="download_checkbox_label">md5:</string>
    <string name="default_sd_directory">BuildBox</string>
    <string name="update_notification_title">Rom update found</string>
    <string name="update_notification_text">There is an update for your Rom available!</string>
    <string name="download_all_button_text">Start Download</string>
    <string name="download_stop_button_text">Stop Download</string>
    <string name="download_detail_button_text">Add to Downloadqueue</string>
    <string name="download_retry_broken">Restart missing Downloads</string>
    <string name="download_flash_text">Flash</string>
    <string name="download_clear_broken">Clear Broken/Aborted</string>
    <string name="download_flash_options_title">Flash Options</string>
    <string name="download_flash_dialog_cancel_text">Cancel</string>
    <string name="item_download_type_zip">zip</string>
    <string name="item_download_type_external">web</string>
    <string name="item_download_type_other">other</string>
    <string name="item_download_type_apk">apk</string>
    <string name="item_download_type_property">type</string>
    <string name="item_download_default_type">buildbox.download.type</string>
    <string name="item_web_button_text">Open in Browser</string>
    <string name="service_download_aborted">aborted</string>
    <string name="description_head_text">Description:</string>
    <string name="preference_dir_title">Downloaddirectory</string>
    <string name="preference_dir_property">dir</string>
    <string name="preference_dir_summary">Define the directory content is downloaded to.</string>
    <string name="preference_interval_property">interval</string>
    <string name="preference_interval_title">Update check interval</string>
    <string name="preference_interval_summary">Set the interval in which the client checks if rom updates are present.</string>
    <string name="preference_common_title">Common</string>
    <string name="preference_update_title">Updatesettings</string>
    <string name="preference_last_checked_version">last_version</string>
    <string name="preference_ignore_build_prop">ignore_build_prop</string>
    <string name="preference_ignore_build_prop_title">Ignore build.prop urls</string>
    <string name="preference_ignore_build_prop_summary">If checked the build.prop properties for the rom and content will be ignored and the resource values will be taken</string>
    <string name="download_running_alert_text">It isn\'t possible to add the item to the download queue, the current queue is processing at the moment, please finish those downloads first and add the item afterwards.</string>
    <string name="download_running_alert_title">Already processing!!</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="preference_download_title">Download</string>
    <string name="preference_queue_size_title">Simultaneous download amount</string>
    <string name="preference_queue_size_summary">Set how many downloads will be performed simultaneously</string>
    <string name="preference_queue_size_default">4</string>
    <string name="preference_interval_default">6</string>
    <string name="preference_queue_size_property">queue_size</string>
    <string name="download_menu_manage_title">Manage</string>
    <string name="activity_menu_settings_title">Settings</string>
    <string name="activtiy_menu_remove_all_title">Clear queue</string>
    <string name="activity_menu_remove_broken_title">Remove broken/aborted</string>
    <string name="download_queue_item_context_remove_title">Remove item</string>
    <string name="activity_menu_add_external_title">Add file from storage</string>
    <string name="activity_menu_backup_queue">Backup current queue</string>
    <string name="activity_menu_restore_queue">Restore backuped queue</string>
    <string name="kitchen_backup_directory_name">backup</string>
    <string name="backup_dialog_title">Backupname</string>
    <string name="backup_dialog_text">Choose a name for the backup</string>
    <string name="ok_button_text">Ok</string>
    <string name="backup_file_extension">.bbb</string>
    <string name="restore_alert_text">Chose the backup you like to restore from</string>
    <string name="restore_alert_title">Restore downloads</string>
    <string name="downloads_cache_filename">downloads.json</string>
    <string name="preference_path_change_error_text">The given path isn\'t accessible, please verify that it is correct and you have read and write access to it (or it\'s parent if it\'s not existent).</string>
    <string name="preference_content_urls_property">content</string>
    <string name="splashscreen_label">BuildBox\n by Tectas \n\nset your device free\n\n\nLoading content...</string>
    <string name="device_model_property">ro.product.model</string>
    <string name="item_device_type">device</string>
    <string name="changelist_item_table_name">items</string>
    <string name="changelist_database_name">Changelist.db</string>
    <string name="changelist_version_field_name">version</string>
    <string name="changelist_title_field_name">title</string>
    <string name="changelist_url_field_name">url</string>
    <string name="changelist_dialog_title">Changelog</string>
    <string name="changelist_dialog_message">The following changes have happend at the content since last use.</string>
    <string name="changelist_removed_head_text">Removed</string>
    <string name="changelist_downgraded_head_text">Downgraded</string>
    <string name="changelist_updated_head_text">Updated</string>
    <string name="changelist_added_head_text">Added</string>
</resources>
