<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory 
        android:title="@string/preference_common_title">
        <CheckBoxPreference 
            android:key="@string/preference_ignore_build_prop"
            android:title="@string/preference_ignore_build_prop_title"
            android:summary="@string/preference_ignore_build_prop_summary"/>	
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/preference_download_title">
        <EditTextPreference 
	        android:key="@string/preference_dir_property"
	        android:title="@string/preference_dir_title"
	        android:summary="@string/preference_dir_summary"/>
        <ListPreference android:key="@string/preference_queue_size_property"
	        android:title="@string/preference_queue_size_title"
	        android:summary="@string/preference_interval_summary"
	        android:entries="@array/download_queue_size"
	        android:entryValues="@array/download_queue_size_values"/>
	</PreferenceCategory>
    
	<PreferenceCategory 
	    android:title="@string/preference_update_title">
	    <ListPreference android:key="@string/preference_interval_property"
	        android:title="@string/preference_interval_title"
	        android:summary="@string/preference_interval_summary"
	        android:entries="@array/update_interval"
	        android:entryValues="@array/update_interval_values"/>
    </PreferenceCategory>
</PreferenceScreen>